[package]
name = "linf"
version = "0.1.3"
edition = "2021"
description = "Create symbolic link in file .symbolic_links"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
console = "0.15.8"
[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security_Credentials",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
]
